<resources>
    <string name="app_name">Period Calendar</string>
    <string name="menstruation_length_label">Menstruation length</string>
    <string name="period_length_label">Period length</string>
    <string name="button_plus_label">+</string>
    <string name="button_minus_label">-</string>
    <string name="last_period_date_label">Last period date</string>
    <string name="pick_last_period_date">Set last period date</string>
    <string name="incoming_period_notification_label">Incoming period notification</string>
    <string name="fertile_days_notification_label">Fertile days notification</string>
    <string name="ovulation_notification_label">Ovulation notification</string>
    <string name="update_preferences">Update</string>
    <string name="go_to_preferences">Preferences</string>
    <string name="clear_calendar">Clear calendar</string>
    <string name="ovulation_notification_title">Ovulation day!</string>
    <string name="ovulation_notification_text">Tomorrow is ovulation day</string>
    <string name="fertile_notification_title">Fertile day!</string>
    <string name="fertile_notification_text">Tomorrow is fertile day</string>
    <string name="period_notification_title">Menstruation day!</string>
    <string name="period_notification_text">Tomorrow is a menstruation day</string>
</resources>
